--- a/01-ai-core-azure-openai-proxy/proxy.ipynb
+++ b/01-ai-core-azure-openai-proxy/proxy.ipynb
@@ -269,18 +269,18 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 113,
+            "execution_count": 2,
             "metadata": {},
             "outputs": [
                 {
                     "ename": "NameError",
-                    "evalue": "name 'ai_core_client' is not defined",
+                    "evalue": "name 'env_file_path' is not defined",
                     "output_type": "error",
                     "traceback": [
                         "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
                         "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-                        "Cell \u001b[0;32mIn[113], line 50\u001b[0m\n\u001b[1;32m     48\u001b[0m DOCKER_NAMESPACE \u001b[39m=\u001b[39m env_val[\u001b[39m\"\u001b[39m\u001b[39mDOCKER_NAMESPACE\u001b[39m\u001b[39m\"\u001b[39m]\n\u001b[1;32m     49\u001b[0m \u001b[39m# No modification required in below snippet\u001b[39;00m\n\u001b[0;32m---> 50\u001b[0m response \u001b[39m=\u001b[39m ai_core_client\u001b[39m.\u001b[39mconfiguration\u001b[39m.\u001b[39mcreate(\n\u001b[1;32m     51\u001b[0m     name \u001b[39m=\u001b[39m \u001b[39m\"\u001b[39m\u001b[39mazure-proxy-serve\u001b[39m\u001b[39m\"\u001b[39m,\n\u001b[1;32m     52\u001b[0m     scenario_id \u001b[39m=\u001b[39m \u001b[39m\"\u001b[39m\u001b[39mazure-openai-proxy\u001b[39m\u001b[39m\"\u001b[39m,\n\u001b[1;32m     53\u001b[0m     executable_id \u001b[39m=\u001b[39m \u001b[39m\"\u001b[39m\u001b[39mazure-openai-proxy\u001b[39m\u001b[39m\"\u001b[39m,\n\u001b[1;32m     54\u001b[0m     input_artifact_bindings \u001b[39m=\u001b[39m [],\n\u001b[1;32m     55\u001b[0m     parameter_bindings \u001b[39m=\u001b[39m [\n\u001b[1;32m     56\u001b[0m         ParameterBinding(key \u001b[39m=\u001b[39m \u001b[39m\"\u001b[39m\u001b[39mOPENAI_API_BASE\u001b[39m\u001b[39m\"\u001b[39m, value \u001b[39m=\u001b[39m OPENAI_API_BASE),\n\u001b[1;32m     57\u001b[0m         ParameterBinding(key \u001b[39m=\u001b[39m \u001b[39m\"\u001b[39m\u001b[39mOPENAI_API_KEY\u001b[39m\u001b[39m\"\u001b[39m, value \u001b[39m=\u001b[39m OPENAI_API_KEY), \n\u001b[1;32m     58\u001b[0m         ParameterBinding(key \u001b[39m=\u001b[39m \u001b[39m\"\u001b[39m\u001b[39mDOCKER_NAMESPACE\u001b[39m\u001b[39m\"\u001b[39m, value \u001b[39m=\u001b[39m DOCKER_NAMESPACE)\n\u001b[1;32m     59\u001b[0m     ],\n\u001b[1;32m     60\u001b[0m     resource_group \u001b[39m=\u001b[39m resource_group_id\n\u001b[1;32m     61\u001b[0m )\n\u001b[1;32m     64\u001b[0m serve_config_resp \u001b[39m=\u001b[39m response\n\u001b[1;32m     65\u001b[0m \u001b[39mprint\u001b[39m(response\u001b[39m.\u001b[39m\u001b[39m__dict__\u001b[39m)\n",
-                        "\u001b[0;31mNameError\u001b[0m: name 'ai_core_client' is not defined"
+                        "Cell \u001b[0;32mIn[2], line 43\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39m# # Create another AI API client to use different base url.\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[39m# ai_api_v2_client = AIAPIV2Client(\u001b[39;00m\n\u001b[1;32m      3\u001b[0m \u001b[39m#     base_url=aic_service_key[\"serviceurls\"][\"AI_API_URL\"] + \"/v2/lm\",\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     41\u001b[0m \u001b[39m# pprint(vars(serve_config_resp))\u001b[39;00m\n\u001b[1;32m     42\u001b[0m \u001b[39m# print(\"configuration for serving the model created\")\u001b[39;00m\n\u001b[0;32m---> 43\u001b[0m \u001b[39mwith\u001b[39;00m \u001b[39mopen\u001b[39m(env_file_path) \u001b[39mas\u001b[39;00m efp:\n\u001b[1;32m     44\u001b[0m     env_val \u001b[39m=\u001b[39m json\u001b[39m.\u001b[39mload(efp)\n\u001b[1;32m     46\u001b[0m OPENAI_API_BASE \u001b[39m=\u001b[39m env_val[\u001b[39m\"\u001b[39m\u001b[39mOPENAI_API_BASE\u001b[39m\u001b[39m\"\u001b[39m]\n",
+                        "\u001b[0;31mNameError\u001b[0m: name 'env_file_path' is not defined"
                     ]
                 }
             ],
@@ -497,7 +497,7 @@
             "name": "python",
             "nbconvert_exporter": "python",
             "pygments_lexer": "ipython3",
-            "version": "3.10.9"
+            "version": "3.11.3"
         },
         "orig_nbformat": 4,
         "vscode": {
