--- a/01-ai-core-azure-openai-proxy/proxy2.ipynb
+++ b/01-ai-core-azure-openai-proxy/proxy2.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -151,7 +151,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[6], line 9\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[39mwith\u001b[39;00m \u001b[39mopen\u001b[39m(git_setup_file_path) \u001b[39mas\u001b[39;00m gs:\n\u001b[1;32m      5\u001b[0m \t\tgit_key \u001b[39m=\u001b[39m json\u001b[39m.\u001b[39mload(gs)\n\u001b[1;32m      7\u001b[0m ai_core_client\u001b[39m.\u001b[39mrepositories\u001b[39m.\u001b[39mcreate(\n\u001b[1;32m      8\u001b[0m     name \u001b[39m=\u001b[39m \u001b[39m\"\u001b[39m\u001b[39mazure-openai-aicore\u001b[39m\u001b[39m\"\u001b[39m,\n\u001b[0;32m----> 9\u001b[0m     url \u001b[39m=\u001b[39m \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mhttps://github.com/\u001b[39m\u001b[39m{\u001b[39;00mgit_key[\u001b[39m'\u001b[39;49m\u001b[39musername\u001b[39;49m\u001b[39m'\u001b[39;49m]\u001b[39m}\u001b[39;00m\u001b[39m/azure-openai-aicore-cap-api\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m# Forked repo\u001b[39;00m\n\u001b[1;32m     10\u001b[0m     username \u001b[39m=\u001b[39m git_key[\u001b[39m\"\u001b[39m\u001b[39musername\u001b[39m\u001b[39m\"\u001b[39m],\n\u001b[1;32m     11\u001b[0m     password \u001b[39m=\u001b[39m git_key[\u001b[39m\"\u001b[39m\u001b[39mpassword\u001b[39m\u001b[39m\"\u001b[39m]\n\u001b[1;32m     12\u001b[0m )\n",
+      "Cell \u001b[0;32mIn[7], line 9\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[39mwith\u001b[39;00m \u001b[39mopen\u001b[39m(git_setup_file_path) \u001b[39mas\u001b[39;00m gs:\n\u001b[1;32m      5\u001b[0m \t\tgit_key \u001b[39m=\u001b[39m json\u001b[39m.\u001b[39mload(gs)\n\u001b[1;32m      7\u001b[0m ai_core_client\u001b[39m.\u001b[39mrepositories\u001b[39m.\u001b[39mcreate(\n\u001b[1;32m      8\u001b[0m     name \u001b[39m=\u001b[39m \u001b[39m\"\u001b[39m\u001b[39mazure-openai-aicore\u001b[39m\u001b[39m\"\u001b[39m,\n\u001b[0;32m----> 9\u001b[0m     url \u001b[39m=\u001b[39m \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mhttps://github.com/\u001b[39m\u001b[39m{\u001b[39;00mgit_key[\u001b[39m'\u001b[39;49m\u001b[39musername\u001b[39;49m\u001b[39m'\u001b[39;49m]\u001b[39m}\u001b[39;00m\u001b[39m/azure-openai-aicore-cap-api\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m# Forked repo\u001b[39;00m\n\u001b[1;32m     10\u001b[0m     username \u001b[39m=\u001b[39m git_key[\u001b[39m\"\u001b[39m\u001b[39musername\u001b[39m\u001b[39m\"\u001b[39m],\n\u001b[1;32m     11\u001b[0m     password \u001b[39m=\u001b[39m git_key[\u001b[39m\"\u001b[39m\u001b[39mpassword\u001b[39m\u001b[39m\"\u001b[39m]\n\u001b[1;32m     12\u001b[0m )\n",
       "\u001b[0;31mKeyError\u001b[0m: 'username'"
      ]
     }
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -349,6 +349,11 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -365,7 +370,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'resource_group_id': 'default', 'labels': None, 'status': None, 'created_at': None}\n"
+      "{'resource_group_id': 'azure-openai-aicore', 'labels': None, 'status': None, 'created_at': None}\n"
      ]
     }
    ],
@@ -380,7 +385,7 @@
     "#  You are NOT REQUIRED TO RE-EXECUTE or Redo previous completed steps.\n",
     "#  Ensure that in the steps that follows modify with your resource group name\n",
     "\n",
-    "resource_group_id = \"default\" # For free tier; `default` exsits in all systems\n",
+    "resource_group_id = \"azure-openai-aicore\" # For free tier; `default` exsits in all systems\n",
     "# resource_group_id = \"my-openai-proxy-ns\" # For paid account you can create a namespace aka resource group\n",
     "                                              # Other steps \n",
     "\n",
@@ -398,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -412,21 +417,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "ename": "AIAPINotFoundException",
-     "evalue": "Failed to post /configurations: Not Found, Could not create configuration because executable azure-openai-proxy for scenario azure-openai-proxy wasn't found.. \n Status Code: 404, Request ID:a10c2bb4-558a-45ef-a4d6-79d67b6c0734",
+     "evalue": "Failed to post /configurations: Not Found, Could not create configuration because executable azure-openai-proxy for scenario azure-openai-proxy wasn't found.. \n Status Code: 404, Request ID:b713c96e-9409-49c2-99a9-5448c70f8c28",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mAIAPINotFoundException\u001b[0m                    Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[15], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39m# No modification required in below snippet\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m response \u001b[39m=\u001b[39m ai_core_client\u001b[39m.\u001b[39;49mconfiguration\u001b[39m.\u001b[39;49mcreate(\n\u001b[1;32m      3\u001b[0m     name \u001b[39m=\u001b[39;49m \u001b[39m\"\u001b[39;49m\u001b[39mazure-proxy-serve\u001b[39;49m\u001b[39m\"\u001b[39;49m,\n\u001b[1;32m      4\u001b[0m     scenario_id \u001b[39m=\u001b[39;49m \u001b[39m\"\u001b[39;49m\u001b[39mazure-openai-proxy\u001b[39;49m\u001b[39m\"\u001b[39;49m,\n\u001b[1;32m      5\u001b[0m     executable_id \u001b[39m=\u001b[39;49m \u001b[39m\"\u001b[39;49m\u001b[39mazure-openai-proxy\u001b[39;49m\u001b[39m\"\u001b[39;49m,\n\u001b[1;32m      6\u001b[0m     input_artifact_bindings \u001b[39m=\u001b[39;49m [],\n\u001b[1;32m      7\u001b[0m     parameter_bindings \u001b[39m=\u001b[39;49m [\n\u001b[1;32m      8\u001b[0m         ParameterBinding(key \u001b[39m=\u001b[39;49m \u001b[39m\"\u001b[39;49m\u001b[39mOPENAI_API_BASE\u001b[39;49m\u001b[39m\"\u001b[39;49m, value \u001b[39m=\u001b[39;49m OPENAI_API_BASE),\n\u001b[1;32m      9\u001b[0m         ParameterBinding(key \u001b[39m=\u001b[39;49m \u001b[39m\"\u001b[39;49m\u001b[39mOPENAI_API_KEY\u001b[39;49m\u001b[39m\"\u001b[39;49m, value \u001b[39m=\u001b[39;49m OPENAI_API_KEY), \n\u001b[1;32m     10\u001b[0m         ParameterBinding(key \u001b[39m=\u001b[39;49m \u001b[39m\"\u001b[39;49m\u001b[39mDOCKER_NAMESPACE\u001b[39;49m\u001b[39m\"\u001b[39;49m, value \u001b[39m=\u001b[39;49m DOCKER_NAMESPACE)\n\u001b[1;32m     11\u001b[0m     ],\n\u001b[1;32m     12\u001b[0m     resource_group \u001b[39m=\u001b[39;49m resource_group_id\n\u001b[1;32m     13\u001b[0m )\n\u001b[1;32m     16\u001b[0m serve_config_resp \u001b[39m=\u001b[39m response\n\u001b[1;32m     17\u001b[0m \u001b[39mprint\u001b[39m(response\u001b[39m.\u001b[39m\u001b[39m__dict__\u001b[39m)\n",
+      "Cell \u001b[0;32mIn[20], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39m# No modification required in below snippet\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m response \u001b[39m=\u001b[39m ai_core_client\u001b[39m.\u001b[39;49mconfiguration\u001b[39m.\u001b[39;49mcreate(\n\u001b[1;32m      3\u001b[0m     name \u001b[39m=\u001b[39;49m \u001b[39m\"\u001b[39;49m\u001b[39mazure-proxy-serve\u001b[39;49m\u001b[39m\"\u001b[39;49m,\n\u001b[1;32m      4\u001b[0m     scenario_id \u001b[39m=\u001b[39;49m \u001b[39m\"\u001b[39;49m\u001b[39mazure-openai-proxy\u001b[39;49m\u001b[39m\"\u001b[39;49m,\n\u001b[1;32m      5\u001b[0m     executable_id \u001b[39m=\u001b[39;49m \u001b[39m\"\u001b[39;49m\u001b[39mazure-openai-proxy\u001b[39;49m\u001b[39m\"\u001b[39;49m,\n\u001b[1;32m      6\u001b[0m     input_artifact_bindings \u001b[39m=\u001b[39;49m [],\n\u001b[1;32m      7\u001b[0m     parameter_bindings \u001b[39m=\u001b[39;49m [\n\u001b[1;32m      8\u001b[0m         ParameterBinding(key \u001b[39m=\u001b[39;49m \u001b[39m\"\u001b[39;49m\u001b[39mOPENAI_API_BASE\u001b[39;49m\u001b[39m\"\u001b[39;49m, value \u001b[39m=\u001b[39;49m OPENAI_API_BASE),\n\u001b[1;32m      9\u001b[0m         ParameterBinding(key \u001b[39m=\u001b[39;49m \u001b[39m\"\u001b[39;49m\u001b[39mOPENAI_API_KEY\u001b[39;49m\u001b[39m\"\u001b[39;49m, value \u001b[39m=\u001b[39;49m OPENAI_API_KEY), \n\u001b[1;32m     10\u001b[0m         ParameterBinding(key \u001b[39m=\u001b[39;49m \u001b[39m\"\u001b[39;49m\u001b[39mDOCKER_NAMESPACE\u001b[39;49m\u001b[39m\"\u001b[39;49m, value \u001b[39m=\u001b[39;49m DOCKER_NAMESPACE)\n\u001b[1;32m     11\u001b[0m     ],\n\u001b[1;32m     12\u001b[0m     resource_group \u001b[39m=\u001b[39;49m resource_group_id\n\u001b[1;32m     13\u001b[0m )\n\u001b[1;32m     16\u001b[0m serve_config_resp \u001b[39m=\u001b[39m response\n\u001b[1;32m     17\u001b[0m \u001b[39mprint\u001b[39m(response\u001b[39m.\u001b[39m\u001b[39m__dict__\u001b[39m)\n",
       "File \u001b[0;32m/opt/homebrew/lib/python3.11/site-packages/ai_api_client_sdk/resource_clients/configuration_client.py:57\u001b[0m, in \u001b[0;36mConfigurationClient.create\u001b[0;34m(self, name, scenario_id, executable_id, parameter_bindings, input_artifact_bindings, resource_group)\u001b[0m\n\u001b[1;32m     55\u001b[0m \u001b[39mif\u001b[39;00m input_artifact_bindings:\n\u001b[1;32m     56\u001b[0m     body[\u001b[39m'\u001b[39m\u001b[39minput_artifact_bindings\u001b[39m\u001b[39m'\u001b[39m] \u001b[39m=\u001b[39m [iab\u001b[39m.\u001b[39mto_dict() \u001b[39mfor\u001b[39;00m iab \u001b[39min\u001b[39;00m input_artifact_bindings]\n\u001b[0;32m---> 57\u001b[0m response_dict \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mrest_client\u001b[39m.\u001b[39;49mpost(path\u001b[39m=\u001b[39;49m\u001b[39m'\u001b[39;49m\u001b[39m/configurations\u001b[39;49m\u001b[39m'\u001b[39;49m, body\u001b[39m=\u001b[39;49mbody, resource_group\u001b[39m=\u001b[39;49mresource_group)\n\u001b[1;32m     58\u001b[0m \u001b[39mreturn\u001b[39;00m ConfigurationCreateResponse\u001b[39m.\u001b[39mfrom_dict(response_dict)\n",
       "File \u001b[0;32m/opt/homebrew/lib/python3.11/site-packages/ai_api_client_sdk/helpers/rest_client.py:146\u001b[0m, in \u001b[0;36mRestClient.post\u001b[0;34m(self, path, body, headers, resource_group)\u001b[0m\n\u001b[1;32m    118\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mpost\u001b[39m(\u001b[39mself\u001b[39m, path: \u001b[39mstr\u001b[39m, body: Dict[\u001b[39mstr\u001b[39m, Union[\u001b[39mstr\u001b[39m, \u001b[39mdict\u001b[39m]] \u001b[39m=\u001b[39m \u001b[39mNone\u001b[39;00m, headers: Dict[\u001b[39mstr\u001b[39m, \u001b[39mstr\u001b[39m] \u001b[39m=\u001b[39m \u001b[39mNone\u001b[39;00m,\n\u001b[1;32m    119\u001b[0m          resource_group: \u001b[39mstr\u001b[39m \u001b[39m=\u001b[39m \u001b[39mNone\u001b[39;00m) \u001b[39m-\u001b[39m\u001b[39m>\u001b[39m \u001b[39mdict\u001b[39m:\n\u001b[1;32m    120\u001b[0m \u001b[39m    \u001b[39m\u001b[39m\"\"\"Sends a POST request to the server.\u001b[39;00m\n\u001b[1;32m    121\u001b[0m \n\u001b[1;32m    122\u001b[0m \u001b[39m    :param path: path of the endpoint the request should be sent to\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    144\u001b[0m \u001b[39m    :rtype: dict\u001b[39;00m\n\u001b[1;32m    145\u001b[0m \u001b[39m    \"\"\"\u001b[39;00m\n\u001b[0;32m--> 146\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_handle_request(\u001b[39m'\u001b[39;49m\u001b[39mpost\u001b[39;49m\u001b[39m'\u001b[39;49m, path\u001b[39m=\u001b[39;49mpath, body_json\u001b[39m=\u001b[39;49mbody, headers\u001b[39m=\u001b[39;49mheaders, resource_group\u001b[39m=\u001b[39;49mresource_group)\n",
       "File \u001b[0;32m/opt/homebrew/lib/python3.11/site-packages/ai_api_client_sdk/helpers/rest_client.py:103\u001b[0m, in \u001b[0;36mRestClient._handle_request\u001b[0;34m(self, method, path, params, body_json, headers, resource_group)\u001b[0m\n\u001b[1;32m    100\u001b[0m     \u001b[39mraise\u001b[39;00m AIAPIInvalidRequestException(description\u001b[39m=\u001b[39merror_description, error_message\u001b[39m=\u001b[39merror_message,\n\u001b[1;32m    101\u001b[0m                                        error_code\u001b[39m=\u001b[39merror_code, request_id\u001b[39m=\u001b[39mrequest_id, details\u001b[39m=\u001b[39merror_details)\n\u001b[1;32m    102\u001b[0m \u001b[39melif\u001b[39;00m status_code \u001b[39m==\u001b[39m \u001b[39m404\u001b[39m:\n\u001b[0;32m--> 103\u001b[0m     \u001b[39mraise\u001b[39;00m AIAPINotFoundException(description\u001b[39m=\u001b[39merror_description, error_message\u001b[39m=\u001b[39merror_message,\n\u001b[1;32m    104\u001b[0m                                  error_code\u001b[39m=\u001b[39merror_code, request_id\u001b[39m=\u001b[39mrequest_id, details\u001b[39m=\u001b[39merror_details)\n\u001b[1;32m    105\u001b[0m \u001b[39melif\u001b[39;00m status_code \u001b[39m==\u001b[39m \u001b[39m412\u001b[39m:\n\u001b[1;32m    106\u001b[0m     \u001b[39mraise\u001b[39;00m AIAPIPreconditionFailedException(description\u001b[39m=\u001b[39merror_description, error_message\u001b[39m=\u001b[39merror_message,\n\u001b[1;32m    107\u001b[0m                                            error_code\u001b[39m=\u001b[39merror_code, request_id\u001b[39m=\u001b[39mrequest_id,\n\u001b[1;32m    108\u001b[0m                                            details\u001b[39m=\u001b[39merror_details)\n",
-      "\u001b[0;31mAIAPINotFoundException\u001b[0m: Failed to post /configurations: Not Found, Could not create configuration because executable azure-openai-proxy for scenario azure-openai-proxy wasn't found.. \n Status Code: 404, Request ID:a10c2bb4-558a-45ef-a4d6-79d67b6c0734"
+      "\u001b[0;31mAIAPINotFoundException\u001b[0m: Failed to post /configurations: Not Found, Could not create configuration because executable azure-openai-proxy for scenario azure-openai-proxy wasn't found.. \n Status Code: 404, Request ID:b713c96e-9409-49c2-99a9-5448c70f8c28"
      ]
     }
    ],
